--- a/dotnetmongo/api/appsettings.json
+++ b/dotnetmongo/api/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "mongodb+srv://api:J93q8JvCjCSAJIXu@cluster0.5ywej.mongodb.net/test?retryWrites=true&w=majority",
+  "ConnectionString": "",
   "dbName": "coronavirus"
 }
